version 0.71.01
	Reading jpeg hue (K-x only)
	Writing jpeg hue
	Handling different jpeg property level numbers
	Reading manual mode ev (K-x only)
	Writing flash mode
	Handling camera specific shutter speeds

version 0.71.00 ( 2011-01-24 )
	Better handling of jpeg quality
	Added hex info to commandline interface (--status_hex)
	Reading auto iso range (K-x only)
	Setting auto iso range (commandline only)
	Added new jpeg images modes
	Reading drive mode (K-x only)
	Reading bracket ev (K-x only)
	Reading shake reduction (K-x only)
	Reading af mode (K-x only)
	Autofocus mode bugfix
	Reading white balance fields (K-x only)
	Writing white balance fields
	Reading flash fields (K-x only)
	Writing flash exposure compensation field
	Writing drive mode
	Writing af mode

version 0.70.01 ( 2011-01-19 )
	File format support for commandline interface (--file_format)
	GUI bugfix
	Deleted useless current_zoom field
	More commandline status info

version 0.70.00 ( 2011-01-17)
	Initial release

